Mon Sep 03 06:15:08 2001  George Lebl <jirka@5z.com>

	* glade/*.c, glade/Makefile.am: the translatable string stuff is now
	  handled by xml-i18n-tools so the string files are not needed


Sun Sep  2 13:27:18 CDT 2001  Linas Vepstas <linas@linas.org>

	* proj.c: fix killer bug that was destroying timer data!
	  Ouch!! (this bug introduced only a few days ago).

	* props-invl.c: add interval edit dialog

	* ctree.*, journal.*, proj.*: add event notification, so that
	  any/all relevent windows are redrawn when data changes.

	* cur-proj.h: start isolating cur-proj, since this global
	  prevents us from having multiple cur projects.

Sat Sep  1 15:51:53 CDT 2001  Linas Vepstas <linas@linas.org>

	* props-task.c: add task properties GUI dialog
	* props-proj.c: convert the project properties dialog to
	  glade, add all the missing bits of the project properties.

	* util.[ch]: clairify date utilities
	* phtml.c: Beautify table layout slightly, add crude 
	  ability to edit intervals.

Fri Aug 31 20:16:55 2001  George Lebl <jirka@5z.com>

	* Makefile.am: add proper gconf CFLAGS and link with GCONF, though
	  not really needed by gtt itself.

Fri Aug 31 09:33:13 CDT 2001  Linas Vepstas <linas@linas.org>

	* proj.[ch], xml-read, write: add more billing rates/types, 
	  add min intervals

	* *.[ch] fix miscellaneous bugs
	
Thu Aug 30 17:00:24 CDT 2001  Linas Vepstas <linas@linas.org>
	
	* design.txt: begin a rudimentary overview of the 
	  internals of GTT
	
	* journal.[ch]: add ability to view & edit journal of 
	  annotated timestamps (via gtkhtml window)
	  
	* phtml.[ch]: add ability to parse gtt-style html markup,
	  and output to aribtrary stream.

2001-08-30  Kjartan Maraas  <kmaraas@gnome.org>

	* menucmd.c: Fix a typo.

Tue Aug 28 20:11:34 CDT 2001  Linas Vepstas <linas@linas.org>

	* main.c: add warning noting file format change.

	* ctree.[ch]: convert old clist display to ctree display for
	  heirarchical projects (sub-projects).  One can drag-n-drop