@@ -1,3 +1,6 @@
+	* proj.c, journal.c: add ability to insert new 
+	  memos into journal.
+
 Mon Sep 03 06:15:08 2001  George Lebl <jirka@5z.com>
 
 	* glade/*.c, glade/Makefile.am: the translatable string stuff is now
